# drf-jwt-auth

./: .gitignore
backend/: pyproject.toml
backend/src/: manage.py
backend/src/apps/users/: models.py  serializers.py  views.py
backend/src/apps/users/tests/: test_api.py
backend/src/core/: settings.py  urls.py
backend/src/core/settings/: __init__.py  common.py  database.py  spectacular.py
