[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["maksimzhohov <zhohovmaksim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
python-dotenv = "^1.0.0"
drf-spectacular = "^0.26.5"
djangorestframework = "^3.14.0"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.8"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
